[gd_scene load_steps=10 format=3 uid="uid://c0k62py27crqg"]

[ext_resource type="Script" path="res://Enemies/Oracle/Sprite/oracle_sprite.gd" id="2_ev0gh"]
[ext_resource type="Texture2D" uid="uid://caxfg4j3bt4ht" path="res://Enemies/Oracle/Sprite/Oracle Body.png" id="2_lqyxq"]
[ext_resource type="Texture2D" uid="uid://bq0bcxjjni3b" path="res://Enemies/Oracle/Sprite/Oracle Eye Light.png" id="3_716ru"]
[ext_resource type="Texture2D" uid="uid://tsb841ey4iln" path="res://Enemies/Oracle/Sprite/Oracle Eye.png" id="4_6k7jv"]
[ext_resource type="Texture2D" uid="uid://batd05ax4dw8x" path="res://Enemies/Oracle/Sprite/Oracle Body Light 1.png" id="5_m70yv"]
[ext_resource type="Texture2D" uid="uid://oe1iwtwyd8hc" path="res://Enemies/Oracle/Sprite/Oracle Body Light 2.png" id="6_cxsrd"]

[sub_resource type="Animation" id="Animation_kn6ll"]
resource_name = "Oracle_Blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OracleEyeLight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.166667, 0.266667, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_k6vxv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OracleEyeLight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2vy7j"]
_data = {
"Oracle_Blink": SubResource("Animation_kn6ll"),
"RESET": SubResource("Animation_k6vxv")
}

[node name="OracleSprite" type="Sprite2D"]
script = ExtResource("2_ev0gh")

[node name="OracleBody" type="Sprite2D" parent="."]
position = Vector2(1.90735e-05, 4.76837e-06)
texture = ExtResource("2_lqyxq")

[node name="OracleEyeLight" type="Sprite2D" parent="."]
position = Vector2(1.90735e-05, 4.76837e-06)
texture = ExtResource("3_716ru")

[node name="OracleEye" type="Sprite2D" parent="."]
position = Vector2(1.13687e-12, 1.49012e-07)
texture = ExtResource("4_6k7jv")

[node name="OracleBodyLight1" type="Sprite2D" parent="."]
position = Vector2(1.90735e-05, -17.5)
texture = ExtResource("5_m70yv")

[node name="OracleBodyLight2" type="Sprite2D" parent="."]
position = Vector2(1.90735e-05, 17.5)
texture = ExtResource("6_cxsrd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2vy7j")
}

[node name="OracleBlinkTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="OracleBlinkTimer" to="." method="_on_oracle_blink_timer_timeout"]
